Fixed @media overflow issues

--- a/WizQuizz/styles-sheets/common/header-style.css
+++ b/WizQuizz/styles-sheets/common/header-style.css
@@ -81,7 +81,7 @@
 }
 
 /* Phone */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 670px) {
     #head {
         height: 100px;
     }
