--- a/WizQuizz/styles-sheets/home/index-style.css
+++ b/WizQuizz/styles-sheets/home/index-style.css
@@ -9,6 +9,7 @@
 }
 
 main {
+    overflow: hidden;
     padding-top: 170px;
     padding-bottom: 90px;
     min-height: calc(100vh - 460px);
