--- a/WizQuizz/styles-sheets/play/search-style.css
+++ b/WizQuizz/styles-sheets/play/search-style.css
@@ -51,6 +51,7 @@ aside {
 }
 
 .quizz-selection {
+    overflow: hidden;
     padding-top: 90px;
     padding-bottom: 90px;
     display: flex;
